# sepsplit-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  download_testfws.sh  wrapper.h
src/: lib.rs  lzvn.rs  main.rs  sep.rs  seplib.h  tests.rs  utils.rs
tests/: integration_tests.rs
tests/fixtures/: sep.dec
