[package]
name = "sepsplit-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.4.1"
num = "0.4.0"
binrw = "0.11.1"
uuid = "1.0.0"
modular-bitfield = "0.11.2"
prettytable-rs = "0.10.0"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.73"

[dev-dependencies]
assert_cmd = "2.0"
test-case = "3.1.0"