[package]
name = "sepsplit-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.7.4"
num = "0.4.3"
binrw = "0.14.0"
uuid = "1.10.0"
modular-bitfield = "0.11.2"
prettytable-rs = "0.10.0"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.1.5"

[dev-dependencies]
assert_cmd = "2.0.14"
test-case = "3.3.1"